<resources>
    <string name="app_name">Food-Ordering-App</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter Your Email Address</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter Your Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name">First Name</string>
    <string name="empty_string" />
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="country">Country</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="phone_hint">Enter your phone</string>
</resources>